k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
      - name: client
        image: fcabrera01/skaffold-client-dev
        # resources:
        #   limits:
        #     memory: "512Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 5000
