k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-cluster-ip-service
            port:
              number: 5000
      - path: /api/server/testmsg
        pathType: Prefix
        backend:
          service:
            name: server-cluster-ip-service
            port:
              number: 3000
  ingressClassName: nginx
